GIT/API links now open in new windows

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -179,7 +179,7 @@
 
       <!-- ** THIS IS THE LINK TO THE FRIENDS.JS, i think.. -->
 
-        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/scottnyerges/FriendFinder">GitHub Repo</a></p>
+        <p><a href="/api/friends" target="_blank">API Friends List</a> | <a href="https://github.com/scottnyerges/FriendFinder" target="_blank">GitHub Repo</a></p>
       </div>
       <!-- CLOSE THE CONTAINER -->
     </div>
