--- a/app/public/home.html
+++ b/app/public/home.html
@@ -51,7 +51,7 @@
 				
 				<!-- COLUMN -->
 				<div class="column full" id="footStyle" align="right">
-					<p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/scottnyerges/FriendFinder">GitHub Repo</a></p>
+					<p><a href="/api/friends" target="_blank">API Friends List</a> | <a href="https://github.com/scottnyerges/FriendFinder" target="_blank">GitHub Repo</a></p>
 				</div>
 				<!-- CLOSE THE CONTAINER -->
 			</div>
